[gd_scene load_steps=36 format=3 uid="uid://jlbnxiq0jd12"]

[ext_resource type="Script" path="res://scripts/stage5.gd" id="1_y0v3u"]
[ext_resource type="TileSet" uid="uid://cig463v134kkq" path="res://scripts/brackyes-bg.tres" id="2_s5um7"]
[ext_resource type="TileSet" uid="uid://cd3sdlcs1tmgc" path="res://scripts/brackyes.tres" id="3_v2e1y"]
[ext_resource type="Theme" uid="uid://dkmjyg6gujjuu" path="res://scripts/parts_scripts/text_box.tres" id="4_8qkmw"]
[ext_resource type="Script" path="res://scripts/parts_scripts/guide_box.gd" id="5_1adop"]
[ext_resource type="PackedScene" uid="uid://cqwjvljkx3jpt" path="res://scenes/parts_scenes/guide.tscn" id="6_ume8w"]
[ext_resource type="PackedScene" uid="uid://8cuuv6odub2t" path="res://scenes/parts_scenes/player.tscn" id="7_lywf1"]
[ext_resource type="Script" path="res://scripts/parts_scripts/next_text_box_area.gd" id="8_miqd6"]
[ext_resource type="Script" path="res://scripts/parts_scripts/gameover_scene_change.gd" id="9_ru2vc"]
[ext_resource type="PackedScene" uid="uid://wxepmw8jf722" path="res://scenes/parts_scenes/map_label.tscn" id="11_q0a4f"]
[ext_resource type="PackedScene" uid="uid://b31xfpxvaw438" path="res://scenes/parts_scenes/gunner.tscn" id="12_u0cyj"]
[ext_resource type="PackedScene" uid="uid://dxnhdyk1vmw0f" path="res://scenes/parts_scenes/button.tscn" id="13_46o0e"]
[ext_resource type="Script" path="res://scripts/parts_scripts/box_explosion.gd" id="14_mlh5p"]
[ext_resource type="Texture2D" uid="uid://t43kfnaukob" path="res://assets/Fire Effect 2/Explosion SpriteSheet.png" id="15_8sppi"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5xnh"]
size = Vector2(24, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s3rxi"]
size = Vector2(179.25, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kr23w"]
size = Vector2(192, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x4qq4"]
size = Vector2(20.2542, 21.0173)

[sub_resource type="AtlasTexture" id="AtlasTexture_ea2uv"]
atlas = ExtResource("15_8sppi")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h7iwf"]
atlas = ExtResource("15_8sppi")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10501"]
atlas = ExtResource("15_8sppi")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q6h3"]
atlas = ExtResource("15_8sppi")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ir0td"]
atlas = ExtResource("15_8sppi")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6otgl"]
atlas = ExtResource("15_8sppi")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_exwgo"]
atlas = ExtResource("15_8sppi")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8qph"]
atlas = ExtResource("15_8sppi")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk7xr"]
atlas = ExtResource("15_8sppi")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj4tk"]
atlas = ExtResource("15_8sppi")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1mh0r"]
atlas = ExtResource("15_8sppi")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vcde"]
atlas = ExtResource("15_8sppi")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_slgje"]
atlas = ExtResource("15_8sppi")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_poym1"]
atlas = ExtResource("15_8sppi")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3wnc"]
atlas = ExtResource("15_8sppi")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aoq5s"]
atlas = ExtResource("15_8sppi")
region = Rect2(192, 192, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_uf22g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ea2uv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h7iwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10501")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q6h3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ir0td")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6otgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_exwgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8qph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk7xr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj4tk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1mh0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vcde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slgje")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_poym1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3wnc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aoq5s")
}],
"loop": false,
"name": &"explosion",
"speed": 15.0
}]

[node name="Stage5" type="Node2D"]
script = ExtResource("1_y0v3u")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -384.0
offset_top = -512.0
offset_right = 1272.0
offset_bottom = 984.0
color = Color(0.467794, 0.472543, 0.499755, 1)

[node name="TileMapBack" type="TileMap" parent="."]
tile_set = ExtResource("2_s5um7")
format = 2
layer_0/tile_data = PackedInt32Array(1376262, 131072, 4, 1441798, 131072, 5, 1507334, 131072, 6, 1376263, 196608, 4, 1441799, 196608, 5, 1507335, 196608, 6, 1572871, 196608, 7, 1638407, 196608, 8, 1376264, 131072, 4, 1441800, 131072, 5, 1507336, 131072, 6, 1376265, 196608, 4, 1441801, 196608, 5, 1507337, 196608, 6, 1572873, 196608, 7, 1638409, 196608, 8, 1376266, 262144, 4, 1441802, 262144, 5, 1507338, 262144, 6, 1638419, 524288, 3, 1638418, 524288, 3, 1638422, 524288, 3, 1638421, 524288, 3)

[node name="TileMapFront" type="TileMap" parent="."]
tile_set = ExtResource("3_v2e1y")
format = 2
layer_0/tile_data = PackedInt32Array(2031694, 262144, 1, 2097230, 262144, 1, 1769529, 262144, 1, 1835065, 262144, 1, 1900601, 262144, 1, 1966137, 262144, 1, 2031673, 262144, 1, 2097209, 262144, 1, 2162745, 262144, 1, 2228281, 262144, 1, 2293817, 262144, 1, 2359353, 262144, 1, 2424889, 262144, 1, 2490425, 262144, 1, 2555961, 262144, 1, 2621497, 262144, 1, 2687033, 262144, 1, 2752569, 262144, 1, 2818105, 262144, 1, 2883641, 262144, 1, 2949177, 262144, 1, 3014713, 262144, 1, 3080249, 262144, 1, 3145785, 262144, 1, 3211321, 262144, 1, 3276857, 262144, 1, 3342393, 262144, 1, 3407929, 262144, 1, 3473465, 262144, 1, 3539001, 262144, 1, 3604537, 262144, 0, 3604538, 262144, 0, 3604539, 262144, 0, 3670075, 262144, 1, 3604540, 262144, 0, 3670076, 262144, 1, 3604541, 262144, 0, 3670077, 262144, 1, 3735613, 262144, 1, 3801149, 262144, 1, 3604542, 262144, 0, 3670078, 262144, 1, 3735614, 262144, 1, 3801150, 262144, 1, 3604543, 262144, 0, 3670079, 262144, 1, 3735615, 262144, 1, 3801151, 262144, 1, 3604544, 262144, 0, 3670080, 262144, 1, 3735616, 262144, 1, 3801152, 262144, 1, 3604545, 262144, 0, 3670081, 262144, 1, 3735617, 262144, 1, 3801153, 262144, 1, 3604546, 262144, 0, 3670082, 262144, 1, 3735618, 262144, 1, 3801154, 262144, 1, 3604547, 262144, 0, 3670083, 262144, 1, 3735619, 262144, 1, 3801155, 262144, 1, 3604548, 262144, 0, 3670084, 262144, 1, 3735620, 262144, 1, 3801156, 262144, 1, 3604549, 262144, 0, 3670085, 262144, 1, 3735621, 262144, 1, 3801157, 262144, 1, 3604550, 262144, 0, 3670086, 262144, 1, 3735622, 262144, 1, 3801158, 262144, 1, 3604551, 262144, 0, 3670087, 262144, 1, 3735623, 262144, 1, 3801159, 262144, 1, 3604552, 262144, 0, 3670088, 262144, 1, 3735624, 262144, 1, 3801160, 262144, 1, 3604553, 262144, 0, 3670089, 262144, 1, 3735625, 262144, 1, 3801161, 262144, 1, 3604554, 262144, 0, 3670090, 262144, 1, 3735626, 262144, 1, 3801162, 262144, 1, 3604555, 262144, 0, 3670091, 262144, 1, 3735627, 262144, 1, 3801163, 262144, 1, 3604556, 262144, 0, 3670092, 262144, 1, 3735628, 262144, 1, 3604557, 262144, 0, 3670093, 262144, 1, 1769550, 262144, 1, 1835086, 262144, 1, 1900622, 262144, 1, 1966158, 262144, 1, 2162766, 262144, 1, 2228302, 262144, 1, 2293838, 262144, 1, 2359374, 262144, 1, 2424910, 262144, 1, 2490446, 262144, 1, 2555982, 262144, 1, 2621518, 262144, 1, 2687054, 262144, 1, 2752590, 262144, 1, 2818126, 262144, 1, 2883662, 262144, 1, 2949198, 262144, 1, 3014734, 262144, 1, 3080270, 262144, 1, 3145806, 262144, 1, 3211342, 262144, 1, 3276878, 262144, 1, 3342414, 262144, 1, 3407950, 262144, 1, 3604558, 262144, 0, 3145796, 262144, 0, 3145797, 262144, 0, 3145798, 262144, 0, 3145799, 262144, 0, 3145800, 262144, 0, 3145801, 262144, 0, 3145802, 262144, 0, 3145803, 262144, 0, 3145804, 262144, 0, 3145805, 262144, 0, 2687043, 262144, 0, 2687042, 262144, 0, 2687041, 262144, 0, 2687040, 262144, 0, 2687039, 262144, 0, 2687038, 262144, 0, 2687037, 262144, 0, 2687036, 262144, 0, 2687035, 262144, 0, 2687034, 262144, 0, 1703993, 262144, 0, 1703992, 262144, 0, 1703991, 262144, 0, 1703990, 262144, 0, 1703989, 262144, 0, 1703988, 262144, 0, 1703987, 262144, 0, 1703986, 262144, 0, 1703985, 262144, 0, 1703984, 262144, 0, 1703983, 262144, 0, 1703982, 262144, 0, 1703981, 262144, 0, 1703980, 262144, 0, 1703979, 262144, 0, 1703978, 262144, 0, 1703977, 262144, 0, 1703976, 262144, 0, 1703975, 262144, 0, 1703974, 262144, 0, 1703973, 262144, 0, 1703972, 262144, 0, 1703971, 262144, 0, 1703970, 262144, 0, 1703969, 262144, 0, 1703968, 262144, 0, 1703967, 262144, 0, 1703966, 262144, 0, 1703965, 262144, 0, 1703964, 262144, 0, 1703963, 262144, 0, 1703962, 262144, 0, 1703961, 262144, 0, 1703960, 262144, 0, 1703959, 262144, 0, 1703958, 262144, 0, 1703957, 262144, 0, 1703956, 262144, 0, 1703955, 262144, 0, 1703954, 262144, 0, 1703953, 262144, 0, 1703952, 262144, 0, 1703951, 262144, 0, 1703950, 262144, 0, 1703949, 262144, 0, 1703948, 262144, 0, 1703947, 262144, 0, 1703946, 262144, 0, 1703945, 262144, 0, 1703944, 262144, 0, 1703943, 262144, 0, 1703942, 262144, 0, 327758, 262144, 1, 393294, 262144, 1, 458830, 262144, 1, 524366, 262144, 1, 589902, 262144, 1, 655438, 262144, 1, 720974, 262144, 1, 786510, 262144, 1, 852046, 262144, 1, 917582, 262144, 1, 983118, 262144, 1, 1048654, 262144, 1, 1114190, 262144, 1, 1179726, 262144, 1, 1704014, 262144, 1, 1245262, 262144, 1, 1310798, 262144, 1, 1376334, 262144, 1, 1441870, 262144, 1, 1507406, 262144, 1, 1572942, 262144, 1, 1638478, 262144, 1, 2228292, 262144, 0, 2228293, 262144, 0, 2228294, 262144, 0, 2228295, 262144, 0, 2228296, 262144, 0, 2228297, 262144, 0, 2228298, 262144, 0, 2228299, 262144, 0, 2228300, 262144, 0, 2228301, 262144, 0, 1769530, 262144, 0, 1769531, 262144, 0, 1769532, 262144, 0, 1769533, 262144, 0, 1769534, 262144, 0, 1769535, 262144, 0, 1769536, 262144, 0, 1769537, 262144, 0, 1769538, 262144, 0, 1769539, 262144, 0, 1310788, 262144, 0, 1310789, 262144, 0, 1310790, 262144, 0, 1310791, 262144, 0, 1310792, 262144, 0, 1310793, 262144, 0, 1310794, 262144, 0, 1310795, 262144, 0, 1310796, 262144, 0, 1310797, 262144, 0, 1703941, 262144, 0, 1703940, 262144, 0, 1703939, 262144, 0, 1703938, 262144, 0, 1703937, 262144, 0, 1703936, 262144, 0, 1769471, 262144, 0, 1769470, 262144, 0, 1769469, 262144, 0, 1769468, 262144, 0, 1769467, 262144, 0, 1769466, 262144, 0, 1769465, 262144, 0, 1769464, 262144, 0, 1769463, 262144, 0, 1769462, 262144, 0, 1769461, 262144, 0, 78, 262144, 1, 65614, 262144, 1, 131150, 262144, 1, 196686, 262144, 1, 262222, 262144, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Title" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("4_8qkmw")
text = "title"

[node name="Next" type="Button" parent="CanvasLayer/Control/HBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("4_8qkmw")
text = "Next
"

[node name="GuideBox" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 192.0
offset_top = 128.0
offset_right = 232.0
offset_bottom = 168.0
script = ExtResource("5_1adop")

[node name="Guide" parent="CanvasLayer/GuideBox" instance=ExtResource("6_ume8w")]
visible = false
offset_left = -95.0
offset_top = -90.0
offset_right = -55.0
offset_bottom = -50.0

[node name="Timer" type="Timer" parent="CanvasLayer/GuideBox"]
one_shot = true

[node name="Player" parent="." instance=ExtResource("7_lywf1")]
position = Vector2(1216, 872)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -50)
zoom = Vector2(2, 2)
limit_right = 1264
limit_bottom = 944
limit_smoothed = true
editor_draw_limits = true

[node name="Gunner" parent="Player" instance=ExtResource("12_u0cyj")]
position = Vector2(-200, -200)

[node name="TextBoxNext" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="TextBoxNext"]
script = ExtResource("8_miqd6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextBoxNext/Area2D"]
position = Vector2(328, 408)
shape = SubResource("RectangleShape2D_u5xnh")

[node name="Area2D2" type="Area2D" parent="TextBoxNext"]
script = ExtResource("8_miqd6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextBoxNext/Area2D2"]
position = Vector2(584, 408)
shape = SubResource("RectangleShape2D_s3rxi")

[node name="Area2D3" type="Area2D" parent="TextBoxNext"]
script = ExtResource("8_miqd6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextBoxNext/Area2D3"]
position = Vector2(240, 544)
shape = SubResource("RectangleShape2D_kr23w")

[node name="SceneChange" type="Node" parent="."]

[node name="Area2D" type="Area2D" parent="SceneChange"]
position = Vector2(1304, 472)
script = ExtResource("9_ru2vc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SceneChange/Area2D"]
position = Vector2(-16, 360)
scale = Vector2(2.36, 9.24)
shape = SubResource("RectangleShape2D_x4qq4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SceneChange/Area2D"]
position = Vector2(-1456, -152)
scale = Vector2(2.36, 9.24)
shape = SubResource("RectangleShape2D_x4qq4")

[node name="Decorations" type="Node" parent="."]

[node name="MapLabel" parent="Decorations" instance=ExtResource("11_q0a4f")]
offset_left = 1104.0
offset_top = 416.0
offset_right = 1179.0
offset_bottom = 467.0
theme_override_colors/font_color = Color(0.733333, 0.45098, 0.4, 1)
text = ">>>"

[node name="DownButton" parent="." instance=ExtResource("13_46o0e")]
position = Vector2(328, 416)

[node name="ClearTimer" type="Timer" parent="."]

[node name="BoxExplosion" type="Node2D" parent="."]
script = ExtResource("14_mlh5p")

[node name="Explosion" type="AnimatedSprite2D" parent="BoxExplosion"]
position = Vector2(264, 248)
sprite_frames = SubResource("SpriteFrames_uf22g")
animation = &"explosion"

[node name="Explosion2" type="AnimatedSprite2D" parent="BoxExplosion"]
position = Vector2(336, 256)
sprite_frames = SubResource("SpriteFrames_uf22g")
animation = &"explosion"

[node name="Explosion3" type="AnimatedSprite2D" parent="BoxExplosion"]
position = Vector2(416, 248)
sprite_frames = SubResource("SpriteFrames_uf22g")
animation = &"explosion"
